--- a/src/tce.glade
+++ b/src/tce.glade
@@ -1,7 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.18.3 
+
+Copyright (C) GPLv3, <http://www.gnu.org/licenses/
+
+This file is part of TCE.
+
+TCE is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+TCE is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with TCE.  If not, see <http://www.gnu.org/licenses/>.
+
+Author: olikraus@gmail.com
+
+-->
 <interface>
   <requires lib="gtk+" version="3.12"/>
+  <!-- interface-license-type gplv3 -->
+  <!-- interface-name TCE -->
+  <!-- interface-description Tool Chain Editor -->
+  <!-- interface-copyright GPLv3, <http://www.gnu.org/licenses/ -->
+  <!-- interface-authors olikraus@gmail.com -->
+  <object class="GtkAboutDialog" id="aboutdialog">
+    <property name="can_focus">False</property>
+    <property name="modal">True</property>
+    <property name="type_hint">normal</property>
+    <property name="program_name">Tool Chain Editor</property>
+    <property name="version">Case Study</property>
+    <property name="website">https://github.com/olikraus/tce</property>
+    <property name="website_label" translatable="yes">Link to Github Project</property>
+    <property name="logo_icon_name">system-run</property>
+    <property name="license_type">gpl-3-0</property>
+    <child internal-child="vbox">
+      <object class="GtkBox" id="aboutdialog-vbox1">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox" id="aboutdialog-action_area1">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkApplicationWindow" id="main_window">
     <property name="width_request">200</property>
     <property name="height_request">200</property>
@@ -157,6 +215,7 @@
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="aboutdialog_activate" swapped="no"/>
                       </object>
                     </child>
                   </object>
