--- a/src/tce.glade
+++ b/src/tce.glade
@@ -64,11 +64,25 @@ Author: olikraus@gmail.com
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="da_popup_new">
+      <object class="GtkMenuItem" id="da_popup_new_tool">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">New</property>
-        <signal name="activate" handler="on_da_popup_new_activate" swapped="no"/>
+        <property name="label" translatable="yes">New Tool</property>
+        <signal name="activate" handler="on_da_popup_new_tool_activate" swapped="no"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkSeparatorMenuItem" id="separatormenuitem2">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="da_popup_add_segment">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Add Segment</property>
+        <signal name="activate" handler="on_da_popup_add_segment_activate" swapped="no"/>
       </object>
     </child>
   </object>
