--- a/src/tce.glade
+++ b/src/tce.glade
@@ -85,6 +85,14 @@ Author: olikraus@gmail.com
         <signal name="activate" handler="on_da_popup_add_segment_activate" swapped="no"/>
       </object>
     </child>
+    <child>
+      <object class="GtkMenuItem" id="da_popup_delete_path">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Delete Path</property>
+        <signal name="activate" handler="on_da_popup_delete_path_activate" swapped="no"/>
+      </object>
+    </child>
   </object>
   <object class="GtkApplicationWindow" id="main_window">
     <property name="width_request">200</property>
